--- a/index.htm
+++ b/index.htm
@@ -62,8 +62,7 @@
 		 		<!--http://en.wikipedia.org/wiki/Internationalized_resource_identifier
 		     	https://github.com/adlnet/xAPI-Spec/blob/master/xAPI.md#activity-id-requirements
 		  		-->
-		 		<input type="text" name="activityid1" id="activityid1"  value="http://mycompanycom/myactivity/" onfocus="$('#'+this.id).val('');" data-validation-engine="validate[required, custom[url]]"  data-errormessage-value-missing="A URI is required!" 
-    data-errormessage-custom-error="Let me give you a hint: http://yourcompany/activities/thisactivity/" >
+		 		<input type="text" name="activityid1" id="activityid1" value="http://mycompanycom/myactivity/" onfocus="$('#'+this.id).val('');" data-validation-engine="validate[required, custom[url]]" data-errormessage-value-missing="A URI is required!" data-errormessage-custom-error="Let me give you a hint: http://yourcompany/activities/thisactivity/" size="40">
 		 		 
 				</label>
 				<h4>B. Activity Definition <span class="optional">Optional</span></h4>
